Add tag autocomplete and metadata initialization
- Add tag autocomplete dropdown in device metadata modal
- Tags loaded from API and cached for fast client-side filtering
- Users can select existing tags for reuse when typing
- Initialize device_metadata.json at app startup (like auth.json)
- Add device_metadata.json to docker-compose volumes
- Reload tags cache after saving metadata for immediate availability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./devices.json:/app/devices.json
       - ./encryption.key:/app/encryption.key
       - ./auth.json:/app/auth.json
+      - ./device_metadata.json:/app/device_metadata.json
     environment:
       - FLASK_ENV=development
       - FLASK_DEBUG=True
